--- a/skai/css/styles.css
+++ b/skai/css/styles.css
@@ -7,13 +7,13 @@ html {
     background-color: black;
 }
 
+body {
+    font-family: 'Montserrat', sans-serif;
+}
+
 .header {
     background-color: rgba(0, 0, 0, .5);
     color: white;
-}
-
-#skai-txt {
-    font-family: 'Cabin', sans-serif;
 }
 
 .header-txt, h3 {
@@ -102,10 +102,6 @@ html {
 .full-width {
     padding-left: 0;
     padding-right: 0;
-}
-
-body {
-    font-family: 'Montserrat', sans-serif;
 }
 
 /*form styles*/
@@ -235,7 +231,6 @@ body {
 .fa {
     padding: 20px;
     font-size: 20px;
-    width: 20px;
     text-align: center;
     text-decoration: none;
 }
@@ -274,10 +269,12 @@ body {
 .footer-links {
     color: white;
     font-size: 75%;
+    font-family: 'Raleway', sans-serif;
 }
 
 .footer-links:hover {
     text-decoration: none;
     color: red;
     font-size: 75%;
+    font-family: 'Raleway', sans-serif;
 }
